--- a/stress-ball/stress-ball/pyproject.toml
+++ b/stress-ball/stress-ball/pyproject.toml
@@ -14,11 +14,12 @@ description = "Stress-guage stress-ball"
 long_description = """More details about the app should go here.
 """
 sources = [
-    "src/stress_ball",
+    "src/stress_ball"
 ]
 test_sources = [
     "tests",
 ]
+resources = ["src/stress_ball/resources",]
 
 requires = [
 ]
